--- a/career-counselling.html
+++ b/career-counselling.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
@@ -15,9 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get expert guidance to study abroad at our global education expo. We offer specialized advice for students looking to study in the UK, study in Canada, and other top destinations from Qatar at this premier international education fair.">
     <title>Free Study Abroad Guidance | Study in UK & Canada | Gulf Education Exhibition</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" href="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png" type="image/png">
     <link rel="canonical" href="https://eduexpoqatar.com/career-counselling.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/career-counselling.html" />
     <link rel="alternate" hreflang="ar" href="https://eduexpoqatar.com/career-counselling-ar.html" />
@@ -146,110 +145,89 @@
     </header>
 
     <main>
-        <section class="counselling-hero-v2">
-            <div class="container">
+        <section id="hero" class="counselling-hero">
+            <div class="container hero-content">
                 <div class="hero-text">
-                    <h1>Navigate Your Future with Confidence</h1>
-                    <p>Unlock your potential with free, personalized career counselling at Qatar Education Expo 2026. We help you discover your path, choose the right university, and build a standout profile for success.</p>
+                    <h1>Expert Guidance to Study Abroad</h1>
+                    <p>Free, personalized career counselling at Qatar Education Expo 2026 to help you discover your path, choose the right university, and build a standout profile.</p>
                     <div class="cta-group">
-                        <a href="student-registration.html" class="btn btn-primary">Book Your Free Session</a>
+                        <a href="student-registration.html" class="btn btn-primary">Register for Free Access</a>
                     </div>
-                    <div class="hero-stats">
-                        <div class="hero-stat-item"><i class="fas fa-university"></i> <p>100+ Partner Universities</p></div>
-                        <div class="hero-stat-item"><i class="fas fa-certificate"></i> <p>Certified Global Counselors</p></div>
-                        <div class="hero-stat-item"><i class="fas fa-check-circle"></i> <p>Free Psychometric Tests</p></div>
-                    </div>
-                </div>
-                <div class="hero-image-v2">
-                    <picture>
-                        <source srcset="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=800&fm=webp" media="(max-width: 768px)">
-                        <img src="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A diverse group of students and professionals collaborating around a table." loading="lazy">
-                    </picture>
                 </div>
             </div>
         </section>
         
-        <section class="feature-section bg-surface">
+        <section id="counselling-intro">
             <div class="container">
-                <h2>Unlock Your Potential</h2>
-                <p class="subtitle">Our complimentary services are designed to provide clarity and direction for your academic and professional journey.</p>
-                <div class="feature-list">
-                    <div class="feature-item">
-                        <div class="feature-icon"><i class="fas fa-user-friends"></i></div>
-                        <div class="feature-text">
-                            <h4>Personalized Counselling</h4>
-                            <p>One-on-one sessions to discuss your aspirations, strengths, and academic options with an experienced advisor.</p>
-                        </div>
+                <h2>Expert Guidance for Your Most Important Decisions</h2>
+                <p class="subtitle">Making choices about your future can be overwhelming. Our team of certified career counsellors is here to provide the clarity and confidence you need to take the next step. All services are complimentary for registered students.</p>
+                <div class="benefits-grid" style="grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));">
+                    <div class="benefit-card">
+                        <i class="fas fa-user-friends"></i>
+                        <h3>Personalized Counselling</h3>
+                        <p>One-on-one sessions to discuss your aspirations, strengths, and academic options with an experienced advisor.</p>
                     </div>
-                    <div class="feature-item">
-                        <div class="feature-icon"><i class="fas fa-chart-pie"></i></div>
-                        <div class="feature-text">
-                            <h4>Psychometric Analysis</h4>
-                            <p>Gain deep insights into your personality and career aptitude with internationally recognized assessment tools.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <i class="fas fa-chart-pie"></i>
+                        <h3>Psychometric Analysis</h3>
+                        <p>Gain deep insights into your personality and career aptitude with internationally recognized assessment tools.</p>
                     </div>
-                    <div class="feature-item">
-                        <div class="feature-icon"><i class="fas fa-file-signature"></i></div>
-                        <div class="feature-text">
-                            <h4>Profile & CV Building</h4>
-                            <p>Learn to craft a compelling CV and personal statement that university admissions officers notice.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <i class="fas fa-file-signature"></i>
+                        <h3>Profile & CV Building</h3>
+                        <p>Learn to craft a compelling CV, personal statement, and LinkedIn profile that university admissions officers notice.</p>
                     </div>
-                    <div class="feature-item">
-                        <div class="feature-icon"><i class="fas fa-graduation-cap"></i></div>
-                        <div class="feature-text">
-                            <h4>University Matching</h4>
-                            <p>Get expert help in shortlisting universities that align perfectly with your academic profile and career goals.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <i class="fas fa-graduation-cap"></i>
+                        <h3>University Matching</h3>
+                        <p>Get expert help in shortlisting universities and courses that align perfectly with your academic profile and career goals.</p>
                     </div>
-                    <div class="feature-item">
-                        <div class="feature-icon"><i class="fas fa-award"></i></div>
-                        <div class="feature-text">
-                            <h4>Scholarship Guidance</h4>
-                            <p>Find and apply for global scholarships with expert help on crafting strong applications.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <i class="fas fa-award"></i>
+                        <h3>Scholarship Guidance</h3>
+                        <p>Find and apply for global and regional scholarships that match your academic profile and background, with expert help on crafting strong applications.</p>
                     </div>
-                    <div class="feature-item">
-                        <div class="feature-icon"><i class="fas fa-route"></i></div>
-                        <div class="feature-text">
-                            <h4>Career Pathway Planning</h4>
-                            <p>Get clarity on emerging career fields and future job trends that align with your long-term ambitions.</p>
-                        </div>
+                    <div class="benefit-card">
+                        <i class="fas fa-route"></i>
+                        <h3>Career Pathway Planning</h3>
+                        <p>Get clarity on emerging career fields, future job trends, and courses that align with your long-term ambitions.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="meet-the-experts-v2" class="bg-surface">
+        <section id="guidance-process-section" class="bg-surface">
             <div class="container">
-                <h2>Meet Your Counsellors</h2>
-                <p class="subtitle">Our team of certified counsellors brings years of experience from top educational institutions worldwide.</p>
-                <div class="counselor-grid">
-                    <div class="counselor-card-v2">
-                        <img src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Headshot of Dr. Aisha Al-Marri" class="speaker-photo">
-                        <div class="speaker-info">
-                            <h4>Dr. Aisha Al-Marri</h4>
-                            <p class="speaker-title">Lead Career Counselor</p>
-                            <p class="speaker-org">With over 15 years in higher education guidance, Dr. Aisha specializes in helping students navigate admissions for top universities.</p>
-                            <p class="counselor-specialty">Specializes in: UK & USA Admissions</p>
-                        </div>
+                <h2>Your Guidance Journey</h2>
+                <p class="subtitle">A simple, structured process to help you get the most out of your counselling experience at the expo.</p>
+                <div class="guidance-process">
+                    <div class="guidance-step">
+                        <div class="step-indicator"><span class="step-number">STEP 1</span><i class="fas fa-arrow-right"></i></div>
+                        <h3>Register for Qatar Education Expo 2026</h3>
+                        <p>Your free student registration is your all-access pass. Once registered, you'll be eligible to book a counselling slot.</p>
                     </div>
-                    <div class="counselor-card-v2">
-                        <img src="https://images.pexels.com/photos/614810/pexels-photo-614810.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Headshot of Mr. Omar Hassan" class="speaker-photo">
-                        <div class="speaker-info">
-                            <h4>Mr. Omar Hassan</h4>
-                            <p class="speaker-title">Admissions & Scholarship Advisor</p>
-                            <p class="speaker-org">An expert in profile building and scholarship applications, with a track record of helping students secure funding for their dream universities.</p>
-                             <p class="counselor-specialty">Specializes in: Scholarship Applications</p>
-                        </div>
+                    <div class="guidance-step">
+                        <div class="step-indicator"><span class="step-number">STEP 2</span><i class="fas fa-arrow-right"></i></div>
+                        <h3>Book Your Session</h3>
+                        <p>Closer to the event date, you'll receive an email to book a specific time slot with one of our counsellors at the expo.</p>
+                    </div>
+                    <div class="guidance-step">
+                        <div class="step-indicator"><span class="step-number">STEP 3</span><i class="fas fa-arrow-right"></i></div>
+                        <h3>Prepare for Your Session</h3>
+                        <p>Think about your questions, interests, and bring any relevant documents like school transcripts or test scores to make the session highly productive.</p>
+                    </div>
+                    <div class="guidance-step">
+                        <div class="step-indicator"><span class="step-number">STEP 4</span><i class="fas fa-arrow-right"></i></div>
+                        <h3>Meet Your Counsellor</h3>
+                        <p>Attend your scheduled session at the dedicated Career Counselling Zone at the expo and walk away with a clearer action plan for your future.</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section id="counselling-faq">
+        <section id="counselling-faq" class="bg-surface">
             <div class="container">
-                <h2>Have Questions? We Have Answers.</h2>
+                <h2>Have Questions?</h2>
                 <div class="faq-accordion">
                     <div class="faq-item">
                         <button class="faq-question" aria-expanded="false">
@@ -282,19 +260,18 @@
             </div>
         </section>
 
-        <section class="counselling-final-cta">
+        <section id="final-cta">
             <div class="container">
                  <h2>Ready to Take the First Step?</h2>
                  <p>Your future is waiting. Register for your free Qatar Education Expo 2026 pass today to unlock access to our expert career counselling services, meet top universities, and more.</p>
                  <div class="cta-group">
-                    <a href="student-registration.html" class="btn btn-primary">Register for Free Now</a>
+                    <a href="student-registration.html" class="btn btn-primary" style="background: #101c35; border-color: #101c35;">Register for Free Now</a>
+                    <a href="contact.html" class="btn btn-outline-light">Contact Us</a>
                  </div>
             </div>
         </section>
     </main>
     
-    <div id="cookie-banner"></div>
-
     <footer class="main-footer">
         <div class="container">
             <div class="footer-grid">
