--- a/career-counselling.html
+++ b/career-counselling.html
@@ -146,26 +146,10 @@
     </header>
 
     <main>
-        <section class="counselling-hero-v2">
+        <section class="page-header">
             <div class="container">
-                <div class="hero-text">
-                    <h1>Navigate Your Future with Confidence</h1>
-                    <p>Unlock your potential with free, personalized career counselling at Qatar Education Expo 2026. We help you discover your path, choose the right university, and build a standout profile for success.</p>
-                    <div class="cta-group">
-                        <a href="student-registration.html" class="btn btn-primary">Book Your Free Session</a>
-                    </div>
-                    <div class="hero-stats">
-                        <div class="hero-stat-item"><i class="fas fa-university"></i> <p>100+ Partner Universities</p></div>
-                        <div class="hero-stat-item"><i class="fas fa-certificate"></i> <p>Certified Global Counselors</p></div>
-                        <div class="hero-stat-item"><i class="fas fa-check-circle"></i> <p>Free Psychometric Tests</p></div>
-                    </div>
-                </div>
-                <div class="hero-image-v2">
-                    <picture>
-                        <source srcset="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=800&fm=webp" media="(max-width: 768px)">
-                        <img src="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="A diverse group of students and professionals collaborating around a table." loading="lazy">
-                    </picture>
-                </div>
+                <h1>Navigate Your Future with Expert Guidance</h1>
+                <p>Free, personalized sessions to help you choose the right university and career path.</p>
             </div>
         </section>
         
