--- a/career-counselling.html
+++ b/career-counselling.html
@@ -13,8 +13,8 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get expert guidance to study abroad at our global education expo. We offer specialized advice for students looking to study in the UK, study in Canada, and other top destinations from Qatar at this premier international education fair.">
-    <title>Free Study Abroad Guidance | Study in UK & Canada | Gulf Education Exhibition</title>
+    <meta name="description" content="Get free, expert career counselling at Qatar Education Expo 2026, the leading university fair in Doha. Our guidance is perfect for students planning to study abroad, including top destinations like the UK and Canada. Don't miss this premier international education fair.">
+    <title>Career Counselling for Study Abroad | Qatar Education Expo | University Fair</title>
     <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
@@ -148,21 +148,21 @@
     <main>
         <section class="page-header">
             <div class="container">
-                <h1>Navigate Your Future with Expert Guidance</h1>
-                <p>Free, personalized sessions to help you choose the right university and career path.</p>
+                <h1>Navigate Your Future with Expert Study Abroad Guidance</h1>
+                <p>Free, personalized sessions at Qatar's top university fair to help you choose the right higher education path.</p>
             </div>
         </section>
         
         <section class="feature-section bg-surface">
             <div class="container">
-                <h2>Unlock Your Potential</h2>
-                <p class="subtitle">Our complimentary services are designed to provide clarity and direction for your academic and professional journey.</p>
+                <h2>Unlock Your Potential at Our Global Education Expo</h2>
+                <p class="subtitle">Our complimentary services at this education exhibition are designed to provide clarity and direction for your academic and professional journey.</p>
                 <div class="feature-list">
                     <div class="feature-item">
                         <div class="feature-icon"><i class="fas fa-user-friends"></i></div>
                         <div class="feature-text">
                             <h4>Personalized Counselling</h4>
-                            <p>One-on-one sessions to discuss your aspirations, strengths, and academic options with an experienced advisor.</p>
+                            <p>One-on-one sessions to discuss your aspirations, strengths, and academic options with an experienced advisor at the education expo.</p>
                         </div>
                     </div>
                     <div class="feature-item">
@@ -183,21 +183,21 @@
                         <div class="feature-icon"><i class="fas fa-graduation-cap"></i></div>
                         <div class="feature-text">
                             <h4>University Matching</h4>
-                            <p>Get expert help in shortlisting universities that align perfectly with your academic profile and career goals.</p>
+                            <p>Get expert help shortlisting universities that align with your goals, whether you plan to study in the UK, study in Canada, or other top destinations.</p>
                         </div>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon"><i class="fas fa-award"></i></div>
                         <div class="feature-text">
                             <h4>Scholarship Guidance</h4>
-                            <p>Find and apply for global scholarships with expert help on crafting strong applications.</p>
+                            <p>Find and apply for global scholarships with expert help on crafting strong applications for your higher education journey.</p>
                         </div>
                     </div>
                     <div class="feature-item">
                         <div class="feature-icon"><i class="fas fa-route"></i></div>
                         <div class="feature-text">
                             <h4>Career Pathway Planning</h4>
-                            <p>Get clarity on emerging career fields and future job trends that align with your long-term ambitions.</p>
+                            <p>Get clarity on emerging career fields and future job trends that align with your long-term ambitions after you study abroad.</p>
                         </div>
                     </div>
                 </div>
@@ -206,8 +206,8 @@
 
         <section id="meet-the-experts-v2" class="bg-surface">
             <div class="container">
-                <h2>Meet Your Counsellors</h2>
-                <p class="subtitle">Our team of certified counsellors brings years of experience from top educational institutions worldwide.</p>
+                <h2>Meet Your Study Abroad Counsellors</h2>
+                <p class="subtitle">Our team of certified counsellors brings years of experience from top educational institutions worldwide to this Qatar university fair.</p>
                 <div class="counselor-grid">
                     <div class="counselor-card-v2">
                         <img src="https://images.pexels.com/photos/415829/pexels-photo-415829.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Headshot of Dr. Aisha Al-Marri" class="speaker-photo">
@@ -224,7 +224,7 @@
                             <h4>Mr. Omar Hassan</h4>
                             <p class="speaker-title">Admissions & Scholarship Advisor</p>
                             <p class="speaker-org">An expert in profile building and scholarship applications, with a track record of helping students secure funding for their dream universities.</p>
-                             <p class="counselor-specialty">Specializes in: Scholarship Applications</p>
+                             <p class="counselor-specialty">Specializes in: Scholarship Applications & Study in Canada</p>
                         </div>
                     </div>
                 </div>
@@ -237,11 +237,11 @@
                 <div class="faq-accordion">
                     <div class="faq-item">
                         <button class="faq-question" aria-expanded="false">
-                            <span>Is the career counselling really free?</span>
+                            <span>Is the career counselling at the education fair really free?</span>
                             <i class="fas fa-plus"></i>
                         </button>
                         <div class="faq-answer">
-                            <p>Yes, all career counselling services, including one-on-one sessions and psychometric tests, are completely free for all registered students attending the expo.</p>
+                            <p>Yes, all career counselling services at the Qatar Education Fair, including one-on-one sessions and psychometric tests, are completely free for all registered students attending the expo.</p>
                         </div>
                     </div>
                     <div class="faq-item">
@@ -250,7 +250,7 @@
                             <i class="fas fa-plus"></i>
                         </button>
                         <div class="faq-answer">
-                            <p>After you <a href="student-registration.html">register for the event</a>, you will receive an email closer to the expo date with a link to book your preferred time slot. Slots are limited and are on a first-come, first-served basis.</p>
+                            <p>After you <a href="student-registration.html">register for the event</a>, you will receive an email closer to the university expo date with a link to book your preferred time slot. Slots are limited and are on a first-come, first-served basis.</p>
                         </div>
                     </div>
                     <div class="faq-item">
@@ -259,7 +259,7 @@
                             <i class="fas fa-plus"></i>
                         </button>
                         <div class="faq-answer">
-                            <p>Absolutely! We encourage parents to be part of the conversation. Just let us know when you book your session so we can accommodate everyone comfortably.</p>
+                            <p>Absolutely! We encourage parents to be part of the conversation at this admission fair. Just let us know when you book your session so we can accommodate everyone comfortably.</p>
                         </div>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
         <section class="counselling-final-cta">
             <div class="container">
                  <h2>Ready to Take the First Step?</h2>
-                 <p>Your future is waiting. Register for your free Qatar Education Expo 2026 pass today to unlock access to our expert career counselling services, meet top universities, and more.</p>
+                 <p>Your future is waiting. Register for your free pass to the Qatar Education Expo 2026 today to unlock access to our expert career counselling services, meet international universities, and plan your higher education journey at the top student recruitment fair in the region.</p>
                  <div class="cta-group">
                     <a href="student-registration.html" class="btn btn-primary">Register for Free Now</a>
                  </div>
