--- a/speaker-registration.html
+++ b/speaker-registration.html
@@ -22,6 +22,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Share your expertise at the Qatar Education Expo 2026. We invite leaders in education and technology to apply to speak at the premier education conference in the GCC.">
     <title>Apply to Speak | Qatar Education Conference 2026 Speaker Registration</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_16,h_16,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_32,h_32,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dj3vhocuf/image/upload/w_180,h_180,c_fit/v1762639402/Untitled_design_-_2025-11-09T033152.664_aerlhr.png">
     <link rel="canonical" href="https://eduexpoqatar.com/speaker-registration.html" />
     <link rel="alternate" hreflang="en" href="https://eduexpoqatar.com/speaker-registration.html" />
     <link rel="alternate" hreflang="en-QA" href="https://eduexpoqatar.com/speaker-registration.html" />
@@ -266,7 +269,7 @@
                             <input type="file" id="form-speaker-headshot-upload" name="headshot_upload" accept="image/png, image/jpeg, image/webp" required class="visually-hidden">
                             
                             <div class="file-upload-ui">
-                                <!-- This label is styled like a button and triggers the file input -->
+                                <!-- This label acts as the visible button -->
                                 <label for="form-speaker-headshot-upload" class="btn file-upload-btn">
                                     <i class="fas fa-upload"></i> Choose File
                                 </label>
@@ -275,7 +278,7 @@
                             <div class="error-message"></div>
                         </div>
                         <div class="form-group">
-                            <label for="form-speaker-experience">Past Speaking Experience (if any)</label>
+                            <label for="form-speaker-experience">Previous Speaking Engagements (if any)</label>
                             <textarea id="form-speaker-experience" name="past_experience" rows="4"></textarea>
                         </div>
                     </fieldset>
@@ -283,7 +286,7 @@
                     <fieldset>
                         <legend>Consents</legend>
                         <div class="form-group-consent" id="consent-promotional-group">
-                            <label>Do you agree to deliver a non-promotional, education-focused session? *</label>
+                            <label>Do you agree to deliver a non-promotional, educational session? *</label>
                             <div class="consent-group">
                                 <div class="consent-radio-item"><input type="radio" id="promo-yes" name="consent-promotional" value="Yes" required><label for="promo-yes">Yes</label></div>
                                 <div class="consent-radio-item"><input type="radio" id="promo-no" name="consent-promotional" value="No" required><label for="promo-no">No</label></div>
@@ -291,7 +294,7 @@
                             <div class="error-message"></div>
                         </div>
                         <div class="form-group-consent" id="consent-recording-group">
-                            <label>Do you consent to your session being recorded and featured in highlights? *</label>
+                            <label>Do you consent to your session being recorded and featured in event highlights? *</label>
                             <div class="consent-group">
                                 <div class="consent-radio-item"><input type="radio" id="record-yes" name="consent-recording" value="Yes" required><label for="record-yes">Yes</label></div>
                                 <div class="consent-radio-item"><input type="radio" id="record-no" name="consent-recording" value="No" required><label for="record-no">No</label></div>
@@ -304,7 +307,7 @@
                 </form>
             </div>
         </section>
-        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="Qatar Education Expo's owl mascot at a podium, encouraging experts to apply as speakers." class="speaker-reg-mascot">
+        <img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762094160/Untitled_design_-_2025-11-02T200537.194_jcatwi.webp" alt="Qatar Education Expo's owl mascot on a podium, encouraging experts to apply as speakers." class="speaker-reg-mascot">
     </main>
 
     <footer class="main-footer">
@@ -322,6 +325,7 @@
                         <li><a href="why-exhibit.html">For Exhibitors</a></li>
                         <li><a href="sponsorship-tiers.html">For Sponsors</a></li>
                         <li><a href="student-registration.html">Student Registration</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
@@ -361,72 +365,6 @@
         </div>
     </footer>
 
-    <!-- Exit Intent Modal -->
-    <div id="exit-intent-modal" class="modal-overlay">
-        <div class="modal-content exit-intent-content" role="dialog" aria-modal="true" aria-labelledby="exit-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <h3 id="exit-modal-title">Download The Deck Before You Leave!</h3>
-            <p>Get our official Exhibitor & Sponsorship Deck, including the floor plan and ROI details, sent straight to your inbox.</p>
-            <button id="open-deck-form-btn" class="btn btn-primary">Get The Deck</button>
-        </div>
-    </div>
-
-    <!-- Deck Request Modal -->
-    <div id="deck-request-modal" class="modal-overlay">
-        <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="deck-modal-title">
-            <button class="modal-close-btn" aria-label="Close">&times;</button>
-            <div id="deck-form-container">
-                <h3 id="deck-modal-title">Get The Official Deck</h3>
-                <p>Please provide your details to receive the Exhibitor & Sponsorship Deck instantly.</p>
-                <form id="deck-request-form" novalidate style="margin-top: 1.5rem;">
-                    <input type="hidden" name="form_source" value="Deck Request Popup">
-                    <div class="form-group">
-                        <label for="deck-form-name">Full Name *</label>
-                        <input type="text" id="deck-form-name" name="name" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-group">
-                        <label for="deck-form-email">Work Email *</label>
-                        <input type="email" id="deck-form-email" name="email" required>
-                        <div class="error-message"></div>
-                    </div>
-                     <div class="form-group">
-                        <label for="deck-form-phone">Mobile Number *</label>
-                        <input type="tel" id="deck-form-phone" name="phone" required>
-                        <div class="error-message"></div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group">
-                            <label for="deck-form-designation">Designation *</label>
-                            <input type="text" id="deck-form-designation" name="designation" required>
-                            <div class="error-message"></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="deck-form-organization">Organization *</label>
-                            <input type="text" id="deck-form-organization" name="organization" required>
-                            <div class="error-message"></div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Download Now</button>
-                </form>
-            </div>
-            <div id="deck-form-success" style="display: none; text-align: center;">
-                <i class="fas fa-check-circle" style="font-size: 3rem; color: #4db6ac; margin-bottom: 1rem;" aria-hidden="true"></i>
-                <h3>Thank You!</h3>
-                <p>Your download should start automatically. If it doesn't, please check your pop-up blocker or try again.</p>
-            </div>
-        </div>
-    </div>
-    
-    <!-- Mobile Sticky Bar -->
-    <div id="mobile-sticky-bar">
-        <a href="booth-registration.html" class="mobile-cta-btn"><i class="fas fa-chalkboard-user"></i><span>Exhibitor</span></a>
-        <a href="sponsorship-registration.html" class="mobile-cta-btn"><i class="fas fa-star"></i><span>Sponsor</span></a>
-        <a href="student-registration.html" class="mobile-cta-btn"><i class="fas fa-graduation-cap"></i><span>Student</span></a>
-        <a href="speaker-registration.html" class="mobile-cta-btn"><i class="fas fa-microphone-alt"></i><span>Speaker</span></a>
-    </div>
-
-    <script src="https://unpkg.com/@panzoom/panzoom@4.5.1/dist/panzoom.min.js"></script>
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
