--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
           }
         },
         "image": [
-          "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp"
+          "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png"
          ],
         "description": "The premier education expo in the MENA region, connecting universities, EdTech innovators, and industry leaders with over 4,000 students, parents, and professionals.",
         "organizer": {
           "@type": "Organization",
           "name": "Student Diwan",
-          "url": "/index.html"
+          "url": "https://eduexpoqatar.com/index.html"
         },
         "offers": {
           "@type": "Offer",
-          "url": "/student-registration.html",
+          "url": "https://eduexpoqatar.com/student-registration.html",
           "price": "0",
           "priceCurrency": "QAR",
           "availability": "https://schema.org/InStock",
@@ -70,8 +70,8 @@
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Qatar Education Expo 2026",
-        "url": "/index.html",
-        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp",
+        "url": "https://eduexpoqatar.com/index.html",
+        "logo": "https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png",
         "sameAs": [
           "https://twitter.com/qatarexpo2026",
           "https://linkedin.com/company/qatarexpo2026",
@@ -83,6 +83,12 @@
           "contactType": "Customer Service",
           "email": "partnerships@eduexpoqatar.com"
         }
+      },
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Qatar Education Expo 2026",
+        "url": "https://eduexpoqatar.com/"
       }
     ]
     </script>
@@ -109,7 +115,7 @@
 
     <header class="main-header" id="main-header">
         <div class="container">
-            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761210698/logo500x250_i8opbv.webp" alt="Qatar Education Expo 2026 Logo"></a>
+            <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1762817230/logo_500_x_250_px_450_x_250_px_180_x_75_px_or55ec.png" alt="Qatar Education Expo 2026 Logo"></a>
             <button class="nav-toggle" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
                     <span class="hamburger-inner"></span>
@@ -559,7 +565,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/f_auto,q_auto/v1761223357/logo-white_1_pqcaph.webp" alt="Qatar Education Expo 2026 Logo"></a>
+                    <a href="index.html" class="logo"><img src="https://res.cloudinary.com/dj3vhocuf/image/upload/v1762860754/logo_500_x_250_px_450_x_250_px_180_x_75_px_4_cnqbla.png" alt="Qatar Education Expo 2026 Logo"></a>
                     <p>The premier event connecting educational leaders, institutions, and innovators in the MENA region.</p>
                 </div>
                 <div class="footer-col">
@@ -570,6 +576,7 @@
                         <li><a href="why-exhibit.html">For Exhibitors</a></li>
                         <li><a href="sponsorship-tiers.html">For Sponsors</a></li>
                         <li><a href="student-registration.html">Student Registration</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </div>
                  <div class="footer-col">
